--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
               
         </div>
     </div>
-    <script src=".js/modal.js">
+    <script src="./js/modal.js">
     </script>
 </body>
 
